--- a/DSCI_Final_Project.ipynb
+++ b/DSCI_Final_Project.ipynb
@@ -1350,38 +1350,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "c1e0636c-62a6-409f-be1b-9233ea45b374",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ERROR",
-     "evalue": "\u001b[1m\u001b[33mError\u001b[39m in `bind_cols()`:\u001b[22m\n\u001b[33m!\u001b[39m Can't recycle `..1` (size 144) to match `..2` (size 146).\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1m\u001b[33mError\u001b[39m in `bind_cols()`:\u001b[22m\n\u001b[33m!\u001b[39m Can't recycle `..1` (size 144) to match `..2` (size 146).\nTraceback:\n",
-      "1. bind_cols(predict(players_best_fit, players_training), players_training)",
-      "2. vec_cbind(!!!dots, .name_repair = .name_repair, .error_call = current_env())",
-      "3. stop_incompatible_size(x = .Primitive(\"quote\")(structure(list(\n .     .pred = c(0.0333333333333333, 0.7, 0.0166666666666667, 0.9, \n .     0.516666666666667, 5.51666666666667, 0.05, 0.0166666666666667, \n .     0.783333333333333, 0.116666666666667, 0.35, 0.583333333333333, \n .     0.0166666666666667, 0.233333333333333, 0.0333333333333333, \n .     0.0166666666666667, 0.0333333333333333, 0.583333333333333, \n .     4.2, 0.0333333333333333, 0.0333333333333333, 0.716666666666667, \n .     0.0166666666666667, 0.0333333333333333, 0.35, 0.583333333333333, \n .     0.516666666666667, 0.7, 0.0333333333333333, 0.516666666666667, \n .     0.0166666666666667, 0.0333333333333333, 0.216666666666667, \n .     0.0333333333333333, 4.63333333333333, 0.05, 0.35, 0.05, 4.15, \n .     0.05, 0.0166666666666667, 0.0166666666666667, 0.0333333333333333, \n .     0.116666666666667, 0.666666666666667, 0.866666666666667, \n .     0.216666666666667, 0.0166666666666667, 0.0833333333333333, \n .     0.05, 0.0333333333333333, 0.0833333333333333, 0.0166666666666667, \n .     2.35, 4.15, 0.7, 0.233333333333333, 0.9, 0.0166666666666667, \n .     0.35, 0.0166666666666667, 0.05, 0.583333333333333, 0.0333333333333333, \n .     0.0833333333333333, 0.8, 0.116666666666667, 0.05, 0.116666666666667, \n .     0.116666666666667, 0.0166666666666667, 0.0166666666666667, \n .     0.05, 0.0333333333333333, 0.35, 4.2, 0.0333333333333333, \n .     0.0333333333333333, 0.7, 0.0333333333333333, 3.2, 0.0333333333333333, \n .     0.7, 0.116666666666667, 2.35, 0.0166666666666667, 0.0166666666666667, \n .     0.666666666666667, 5.51666666666667, 0.133333333333333, 1.01666666666667, \n .     0.116666666666667, 4.63333333333333, 0.0833333333333333, \n .     0.0166666666666667, 9.73333333333333, 4.15, 0.583333333333333, \n .     0.7, 0.966666666666667, 0.9, 0.716666666666667, 0.116666666666667, \n .     0.05, 0.783333333333333, 0.05, 0.0166666666666667, 0.516666666666667, \n .     5.58333333333333, 0.0333333333333333, 0.9, 0.783333333333333, \n .     4.3, 0.0166666666666667, 0.05, 0.9, 0.35, 2.95, 0.0166666666666667, \n .     0.866666666666667, 2.95, 3.36666666666667, 0.7, 2.88333333333333, \n .     0.0166666666666667, 0.9, 0.0333333333333333, 0.7, 4.15, 4.63333333333333, \n .     0.516666666666667, 0.7, 0.05, 3.2, 0.35, 0.05, 4.2, 0.0166666666666667, \n .     0.216666666666667, 0.583333333333333, 5.51666666666667, 5.51666666666667, \n .     0.7, 0.0166666666666667)), class = c(\"tbl_df\", \"tbl\", \"data.frame\"\n . ), row.names = c(NA, -144L))), y = .Primitive(\"quote\")(structure(list(\n .     experience = c(\"Veteran\", \"Regular\", \"Amateur\", \"Amateur\", \n .     \"Veteran\", \"Amateur\", \"Beginner\", \"Regular\", \"Veteran\", \"Veteran\", \n .     \"Amateur\", \"Veteran\", \"Amateur\", \"Amateur\", \"Veteran\", \"Amateur\", \n .     \"Veteran\", \"Veteran\", \"Beginner\", \"Veteran\", \"Regular\", \"Beginner\", \n .     \"Regular\", \"Veteran\", \"Amateur\", \"Veteran\", \"Veteran\", \"Regular\", \n .     \"Veteran\", \"Veteran\", \"Regular\", \"Regular\", \"Amateur\", \"Veteran\", \n .     \"Beginner\", \"Beginner\", \"Amateur\", \"Beginner\", \"Beginner\", \n .     \"Beginner\", \"Amateur\", \"Regular\", \"Amateur\", \"Veteran\", \"Amateur\", \n .     \"Veteran\", \"Amateur\", \"Regular\", \"Veteran\", \"Beginner\", \"Regular\", \n .     \"Veteran\", \"Amateur\", \"Veteran\", \"Beginner\", \"Pro\", \"Amateur\", \n .     \"Amateur\", \"Amateur\", \"Amateur\", \"Regular\", \"Beginner\", \"Veteran\", \n .     \"Veteran\", \"Veteran\", \"Regular\", \"Regular\", \"Veteran\", \"Veteran\", \n .     \"Veteran\", \"Amateur\", \"Amateur\", \"Beginner\", \"Amateur\", \"Amateur\", \n .     \"Regular\", \"Beginner\", \"Veteran\", \"Regular\", \"Regular\", \"Veteran\", \n .     \"Regular\", \"Veteran\", \"Pro\", \"Regular\", \"Veteran\", \"Amateur\", \n .     \"Amateur\", \"Amateur\", \"Amateur\", \"Regular\", \"Regular\", \"Regular\", \n .     \"Beginner\", \"Veteran\", \"Amateur\", \"Amateur\", \"Beginner\", \n .     \"Veteran\", \"Pro\", \"Regular\", \"Amateur\", \"Beginner\", \"Veteran\", \n .     \"Beginner\", \"Pro\", \"Beginner\", \"Amateur\", \"Veteran\", \"Pro\", \n .     \"Pro\", \"Veteran\", \"Amateur\", \"Veteran\", \"Beginner\", \"Amateur\", \n .     \"Beginner\", \"Amateur\", \"Amateur\", \"Veteran\", \"Regular\", \"Veteran\", \n .     \"Veteran\", \"Amateur\", \"Pro\", \"Amateur\", \"Amateur\", \"Amateur\", \n .     \"Veteran\", \"Pro\", \"Beginner\", \"Beginner\", \"Veteran\", \"Regular\", \n .     \"Beginner\", \"Regular\", \"Amateur\", \"Beginner\", \"Beginner\", \n .     \"Amateur\", \"Amateur\", \"Veteran\", \"Amateur\", \"Amateur\", \"Pro\", \n .     \"Amateur\"), played_hours = c(0, 0.1, 0, 0, 0, 0, 0, 0, 0, \n .     0.1, 0.1, 0.1, 0, 0, 0, 0, 0.1, 0, 0, 0.1, 0, 0, 0, 0, 0.1, \n .     0.1, 0.1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.1, 0, 0, 0.1, 0, \n .     0.1, 0.1, 0, 0, 0, 0, 0, 0, 0.1, 0, 0, 0, 0, 0.1, 0.1, 0, \n .     0, 0, 0.1, 0, 0, 0, 0, 0, 0, 0.1, 0.1, 0, 0, 0, 0.1, 0, 0.1, \n .     0.1, 0, 0, 0, 0.1, 0.1, 0, 0, 0, 0.1, 0.1, 0, 0, 0, 0.2, \n .     0.6, 0.3, 0.6, 0.6, 0.4, 0.2, 0.3, 0.4, 0.6, 0.2, 0.2, 0.5, \n .     0.2, 0.4, 0.2, 0.6, 0.3, 0.4, 0.3, 0.2, 30.3, 3.8, 0.7, 1.6, \n .     1.5, 48.4, 1, 0.7, 1.8, 1.4, 5.6, 2.2, 12.5, 2.9, 1, 17.2, \n .     53.9, 3.5, 1, 1.2, 0.8, 2, 2.7, 4, 7.1, 18.5, 56.1, 1, 23.7, \n .     1.2, 1, 2.7, 0.8, 32, 1.7, 2.3), Age = c(17, 21, 17, 21, \n .     22, 22, 17, 17, 23, 18, 23, 21, 17, 33, 17, 17, 17, 21, 24, \n .     17, 23, 42, 17, 17, 23, 21, 22, 21, 17, 22, 17, 22, 26, 17, \n .     28, 17, 23, 17, 23, 17, 17, 17, 19, 18, 20, 24, 26, 17, 20, \n .     17, 24, 20, 17, 46, 23, 15, 32, 21, 17, 23, 17, 17, 21, 17, \n .     20, 20, 18, 16, 19, 18, 16, 17, 17, 19, 23, NA, 24, 17, 22, \n .     21, 17, 50, 17, 17, 18, 44, 17, 17, 20, 22, 19, 8, 28, 26, \n .     20, 17, 24, 22, 21, 17, 14, 21, 37, 18, 17, 19, 17, 17, 22, \n .     NA, 9, 17, 21, 23, 25, 17, 17, 21, 23, 25, 17, 24, 27, 11, \n .     17, 14, 17, 21, 17, 17, 22, 27, 22, 21, 17, 49, 23, 17, 24, \n .     17, 26, 21, 22, 22, 17, 17)), row.names = c(NA, -146L), class = c(\"tbl_df\", \n . \"tbl\", \"data.frame\"))), x_size = 144L, y_size = 146L, x_arg = \"..1\", \n .     y_arg = \"..2\", call = <environment>)",
-      "4. stop_incompatible(x, y, x_size = x_size, y_size = y_size, ..., \n .     x_arg = x_arg, y_arg = y_arg, details = details, message = message, \n .     class = c(class, \"vctrs_error_incompatible_size\"), call = call)",
-      "5. stop_vctrs(message, class = c(class, \"vctrs_error_incompatible\"), \n .     x = x, y = y, details = details, ..., call = call)",
-      "6. abort(message, class = c(class, \"vctrs_error\"), ..., call = call)",
-      "7. signal_abort(cnd, .file)"
-     ]
+     "data": {
+      "text/plain": [
+       "══ Workflow [trained] ══════════════════════════════════════════════════════════\n",
+       "\u001b[3mPreprocessor:\u001b[23m Recipe\n",
+       "\u001b[3mModel:\u001b[23m nearest_neighbor()\n",
+       "\n",
+       "── Preprocessor ────────────────────────────────────────────────────────────────\n",
+       "3 Recipe Steps\n",
+       "\n",
+       "• step_dummy()\n",
+       "• step_scale()\n",
+       "• step_center()\n",
+       "\n",
+       "── Model ───────────────────────────────────────────────────────────────────────\n",
+       "\n",
+       "Call:\n",
+       "kknn::train.kknn(formula = ..y ~ ., data = data, ks = min_rows(6,     data, 5), kernel = ~\"rectangular\")\n",
+       "\n",
+       "Type of response variable: continuous\n",
+       "minimal mean absolute error: 3.292708\n",
+       "Minimal mean squared error: 77.61652\n",
+       "Best kernel: rectangular\n",
+       "Best k: 6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 144 × 1</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>.pred</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>0.03333333</td></tr>\n",
+       "\t<tr><td>0.70000000</td></tr>\n",
+       "\t<tr><td>0.01666667</td></tr>\n",
+       "\t<tr><td>⋮</td></tr>\n",
+       "\t<tr><td>5.51666667</td></tr>\n",
+       "\t<tr><td>0.70000000</td></tr>\n",
+       "\t<tr><td>0.01666667</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 144 × 1\n",
+       "\\begin{tabular}{l}\n",
+       " .pred\\\\\n",
+       " <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 0.03333333\\\\\n",
+       "\t 0.70000000\\\\\n",
+       "\t 0.01666667\\\\\n",
+       "\t ⋮\\\\\n",
+       "\t 5.51666667\\\\\n",
+       "\t 0.70000000\\\\\n",
+       "\t 0.01666667\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 144 × 1\n",
+       "\n",
+       "| .pred &lt;dbl&gt; |\n",
+       "|---|\n",
+       "| 0.03333333 |\n",
+       "| 0.70000000 |\n",
+       "| 0.01666667 |\n",
+       "| ⋮ |\n",
+       "| 5.51666667 |\n",
+       "| 0.70000000 |\n",
+       "| 0.01666667 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "    .pred     \n",
+       "1   0.03333333\n",
+       "2   0.70000000\n",
+       "3   0.01666667\n",
+       "⋮   ⋮         \n",
+       "142 5.51666667\n",
+       "143 0.70000000\n",
+       "144 0.01666667"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "player_preds <- players_best_fit |>\n",
-    "predict(players_training) |>\n",
-    "bind_cols(players_training)\n",
-    "player_preds\n",
     "\n",
-    "marathon_plot <- player_preds |>\n",
-    "    ggplot(aes(x = max, y = time_hrs)) +\n",
-    "    geom_point() +\n",
-    "    geom_line(mapping = aes(x = , y = .pred), color = \"blue\") +\n",
-    "    labs(x = \"Maximum Distance\", y = \"Time Taken (hrs)\", title = \"Time Taken to Run Distance per Week \")\n",
-    "marathon_plot"
+    "players_pred <- predict(players_best_fit, players_training) |>\n",
+    "    filter(!is.na(.pred))\n",
+    "players_pred\n",
+    "\n"
    ]
   },
   {
@@ -1390,7 +1462,14 @@
    "id": "727a5347-e252-4ef8-8521-44065bf69fec",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "marathon_plot <- players_preds |>\n",
+    "    ggplot(aes(x = played_hours, y = experience)) +\n",
+    "    geom_point() +\n",
+    "    geom_line(mapping = aes(x = played_hours, y = .pred), color = \"blue\") +\n",
+    "    labs(x = \"Maximum Distance\", y = \"Time Taken (hrs)\", title = \"Time Taken to Run Distance per Week \")\n",
+    "marathon_plot"
+   ]
   }
  ],
  "metadata": {
