--- a/DSCI_Final_Project.ipynb
+++ b/DSCI_Final_Project.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "id": "5c291735-17f2-4e48-a23d-acbb3bd3c9a2",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,8 @@
    ],
    "source": [
     "set.seed(2000)\n",
-    "players <- read_csv(\"players.csv\")\n",
+    "\n",
+    "players <- read_csv(\"https://raw.githubusercontent.com/AnaSri-DSCI/dsci-100-2025-group-005-18/refs/heads/main/players.csv\")\n",
     "players\n",
     "\n",
     "players_select <- players |>\n",
@@ -170,7 +171,7 @@
     "\n",
     "players_split <- initial_split(players_select, prop = 0.75, strata = played_hours)\n",
     "players_training <- training(players_split)\n",
-    "players_testing <- testing(players_split)\n"
+    "players_testing <- testing(players_split)"
    ]
   },
   {
