--- a/DSCI_Final_Project.ipynb
+++ b/DSCI_Final_Project.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "34ea87a7-ebb7-4a0d-be4d-47694bedf749",
+   "metadata": {},
+   "source": [
+    "Method and Results:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "80c2aeb0-3634-4513-b50e-099ba7ed9c2b",
@@ -186,6 +194,14 @@
     "players_split <- initial_split(players_select, prop = 0.75, strata = played_hours)\n",
     "players_training <- training(players_split)\n",
     "players_testing <- testing(players_split)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eeb9fe3f-cc33-4458-aaca-483257889b78",
+   "metadata": {},
+   "source": [
+    "In this first step, we are first loading the dataset \"players.csv\" from the github repository, and selecting the columns needed to answer our question. Using the select() function, the columns experience, age, and played_hours are selected as experience and age are our predictors to find the number of played_hours. Finally, we split the data set, and create training and testing dataframes to use for the knn regression analysis. The training() function is a split of the original code that is used to test the knn regression on the dataset, whereas, the testing() function evaluates the performance of the model by comparing predicted values to actual values."
    ]
   },
   {
@@ -1051,6 +1067,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f115a49-6c37-490e-8189-881aa1443ea9",
+   "metadata": {},
+   "source": [
+    "Now, the data set players_select is being represented in 2 plots that shows Age or experience versus the number of hours played. The purpose of these plots is to represent both the predictors and how it relates to played_hours for the original data frame. Age vs. played_hours is visualized using a smooth plot, that shows a concave up parabola slope, where the hours spent playing the game increases as age decreases until 100 hours, when it begins increasing with age. Experience is represented in a bar plot, indicating that regular and amateur players spend the most time playing."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "1da2c07a-a16b-4fcf-ba4b-e4e3872dee0a",
@@ -1098,6 +1122,18 @@
     "    add_recipe(players_recipe) |> \n",
     "    add_model(players_spec)\n",
     "players_workflow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd3d18ca-4568-468c-84fc-77b5cfc21c4b",
+   "metadata": {},
+   "source": [
+    "In this step, a specification is created, which essentially sets the engine and mode used for analyzing the dataset. By using \"kknn\", this indicates a package that would find the k-nearest neighbors, and the \"regression\" indicates that the model is being used to predict a certain outcome. \n",
+    "\n",
+    "Next, a recipe a used to assign the predictors for the played_hours, which are experience and Age. step_dummy was used to prevent the noinal data values, like experience to ensure it can be included in the modelling of the data set. step_scale is an important step to scale all the values so that they influence the calculated at the same level, as opposed to one having a much greater impact or a very small impact due to it being on a different scale. Finally, step_center ensures that all the predictors are at the center.\n",
+    "\n",
+    "The players_vfold code is used to create a \"nested\" cross-validation object, which selects a model and estimates how well it generalizes to an unseen dataset to provide the most accurate results. Finally, by creating a workflow for the dataset, the model is specified and the pre-processing recipe steps are added."
    ]
   },
   {
