--- a/DSCI_Final_Project.ipynb
+++ b/DSCI_Final_Project.ipynb
@@ -1515,6 +1515,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "675d9815-8570-4fce-8f13-90e41db793a2",
+   "metadata": {},
+   "source": [
+    "In this code, we are using the testing data set with the now determined k-value, 11. This gives an estimated rmse value of 31.72. As the rmse value indicates how close our predicted value is to our actual value, this estimate isn't ideal, however, given that the scope of the data is very large, and the values vary from 0 to 200, this error cannot be avoided due to these jumps in the raw data set."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 74,
    "id": "c1e0636c-62a6-409f-be1b-9233ea45b374",
@@ -2025,7 +2033,9 @@
    "id": "981be040-eae7-4fd9-8633-1fb968da6462",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "The trend"
+   ]
   },
   {
    "cell_type": "code",
