--- a/DSCI_Final_Project.ipynb
+++ b/DSCI_Final_Project.ipynb
@@ -2028,13 +2028,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "981be040-eae7-4fd9-8633-1fb968da6462",
+   "cell_type": "markdown",
+   "id": "14738e3f-d01e-4183-9fe3-08c0c1ac4d66",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "The trend"
+    "This code plots the training data for age vs. hours played. Looking at the plot, the geom_line data indicates the standard prediction lines for the played hours, which shows a trend of increase and decrease in the number of hours played between the ages 18 to 32, with players of ages unde the threshold remaning at a constant of 5 hours, and players above remaining at 3. The meximum number of hours played is 9 for players between ages 20 and 23."
    ]
   },
   {
@@ -2547,11 +2545,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4169be12-58e0-48d1-adc9-cb9b00d60498",
+   "cell_type": "markdown",
+   "id": "f06f170a-18e5-4255-94f1-1aa720e83a94",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
