--- a/DSCI_Final_Project.ipynb
+++ b/DSCI_Final_Project.ipynb
@@ -2032,7 +2032,7 @@
    "id": "14738e3f-d01e-4183-9fe3-08c0c1ac4d66",
    "metadata": {},
    "source": [
-    "This code plots the training data for age vs. hours played. Looking at the plot, the geom_line data indicates the standard prediction lines for the played hours, which shows a trend of increase and decrease in the number of hours played between the ages 18 to 32, with players of ages unde the threshold remaning at a constant of 5 hours, and players above remaining at 3. The meximum number of hours played is 9 for players between ages 20 and 23."
+    "This code plots the training data for age vs. average hours played. Looking at the plot, the geom_line data indicates the standard prediction lines for the played hours, which shows a trend of increase and decrease in the number of hours played between the ages 18 to 32, with players of ages unde the threshold remaning at a constant of 5 hours, and players above remaining at 3. The meximum number of hours played is 9 for players between ages 20 and 23."
    ]
   },
   {
@@ -2548,7 +2548,9 @@
    "cell_type": "markdown",
    "id": "f06f170a-18e5-4255-94f1-1aa720e83a94",
    "metadata": {},
-   "source": []
+   "source": [
+    "This bar graphs represents the average number of hours played for each gender category. The categories \"Other\", \"Prefer not to say\", and \"Two-Sprited\", all have 1 or less than 1 hours played in the. The meximum number of hours played is 15 hours, which is by individuals in the category \"Non-binary\"."
+   ]
   },
   {
    "cell_type": "code",
