--- a/DSCI_Final_Project.ipynb
+++ b/DSCI_Final_Project.ipynb
@@ -2,10 +2,40 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "4870ec9a-38c4-4f48-aeef-faa7397b1fcc",
+   "metadata": {},
+   "source": [
+    "# Predicting Time Played Due to “Kinds” of Players"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf3a7b27-21dd-4e1d-9ab7-cab4e6cdda43",
+   "metadata": {},
+   "source": [
+    "***Introduction:***\n",
+    "\n",
+    "This report analyzes the data from the research group, Pacific Laboratory for Artificial Intelligence. The goal of the research group is to advance artificial intelligence through groundbreaking work in generative modelling, reinforcement learning, and probabilistic programming. The goal of the research is to explore behavioral data from participants and create an embodied AI that can not only understand speech but is able to act within a complex virtual environment. \n",
+    "\n",
+    "The method includes setting up a Minecraft server that players could log in to, play for a certain number of hours, and have their playing behavior stored. The data collected explores the differences in how the players play in a Minecraft world. \n",
+    "We selected Question 2, which asks: ‘Which “kinds” of players are most likely to contribute a large amount of data?’ Our specific question tackles the “kind” of players, using the variables experience, gender and age to predict the number of hours played on the server. \"How can experience, gender and age predict the number of hours played on the server?\" Question 2 aims to find the types of players responsible for the collection of the most amount of data, setting experience, gender and Age as the predictors for played_hours, where the more number of hours played correlates to more data collection. This question allows us to be able to find what kinds of players to target that will contribute more data in our recruiting efforts. \n",
+    "\n",
+    "The dataset used for this analysis is players.csv, which includes the following variables:\n",
+    "1. experience: categorical, Level of gaming experience (e.g., Beginner, Amateur, Veteran).\n",
+    "2. subscribe: boolean, If the player is subscribed to a game-related newsletter (True or False).\n",
+    "3. hashedEmail: string, Email address of the player, hashed\n",
+    "4. played_hours: numerical, Total hours played\n",
+    "5. name: string, Name of player\n",
+    "6. gender: categorical, Gender of player (e.g., Male, Female, Non-binary, Prefer not to say).\n",
+    "7. Age: numerical, Age of player\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "34ea87a7-ebb7-4a0d-be4d-47694bedf749",
    "metadata": {},
    "source": [
-    "Method and Results:"
+    "***Method and Results:***"
    ]
   },
   {
@@ -2553,12 +2583,72 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f06cee7f-676c-40f9-a817-5ae22df0a104",
+   "cell_type": "markdown",
+   "id": "3803bb4b-6643-4bf3-ad02-eaf8d2e581fc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "***Discussion***\n",
+    "\n",
+    "Our analysis explored the relationship between age, gender and experience in predicting the amount of hours played on the PLAI Minecraft server. This analysis allows us to answer the original research question that was raised ‘Which “kinds” of players are most likely to contribute a large amount of data?’ By using our specific question ‘How can experience, gender and age predict the number of hours played on the server?’. With the analysis we are then able to find what kinds of players to target during recruiting, creating a more efficient way of collecting more data. Several trends emerged from our visualizations:\n",
+    "\n",
+    "Experience and Play Time:\n",
+    "\n",
+    "Players with a ‘Regular’ experience had both the highest total hours played as well as the highest average playtime out of any of the experience levels. \n",
+    "This is followed by quite a steep drop to the ‘Amateur’ experience.\n",
+    "In fact, the regular group completely exceeds the other categories by having a higher average playtime than all the other groups combined, indicating a disproportionately high contribution\n",
+    "One thing that we found pretty interesting is how the ‘Pro’ and ‘Veteran’ players logged some of the least average playtime.\n",
+    "Conclusion: With the comparison of Experience and Play Time we found that ‘Regular’ experience level players will give the most data and should be targeted during recruitment as they are the most consistent and significant contributors to the data collected.\n",
+    "\n",
+    "Age and Play Time:\n",
+    "\n",
+    "With the variable age there was a lot more variability and unexpectedness.\n",
+    "We found early peaks in playing hours with players in their mid to late teens, with a noticeable drop as age increases beyond the age of 25.\n",
+    "We do however have two interesting peaks with the outliers of under the age of 10 and the age of late 40’s.\n",
+    "This could be due to different reasons such as more time on their hands, a few players really enjoying the server or having very few participants within those age ranges\n",
+    "Conclusion: The comparison of Age and Play Time found that we should focus more of the recruitment efforts at the age range of 15-20 as that group logged the most hours as well as highest average hours\n",
+    "\n",
+    "Gender and Play Time:\n",
+    "\n",
+    "Non-binary players reported the highest average playtime, followed by female and agender players.\n",
+    "Players who identified as “Other”, “Two-Spirited”, or “Prefer not to say” had the lowest average playtime out of all of the groups\n",
+    "Conclusion: Within the analysis of Gender to Playtime we found out that the two main groups that should be targeted when referring to gender would be the Non-binary and female populations, who showed more engagement than the others\n",
+    "\n",
+    "Takeaways:\n",
+    "\n",
+    "Across the three variables – Experience, Age and Gender – we found the key takeaways to the question ‘Which “kinds” of players are most likely to contribute a large amount of data?’\n",
+    "Experience: ‘Regular’ Players\n",
+    "Age: 15 - 20 years old\n",
+    "Gender: Non-binary and female players\n",
+    "This analysis allows us to find which “kinds” of players are most likely to contribute a large amount of data so that we can target those players in our recruiting efforts.\n",
+    "\n",
+    "Was This Expected?\n",
+    "\n",
+    "Some of the findings aligned with the group's expectations, such as younger players having more play time and contributing to more data overall. However, there were a few unexpected conclusions that were reached. \n",
+    "The astronomically high contribution from ‘Regular’ players was a little unexpected so was the opposing groups, ‘Pro’ and ‘Veteran’ players logging in so little hours. The lack of playtime from these groups could be because of the difficulty of the server or feeling a lack of boredom amongst these groups.\n",
+    "With age it was also a little unexpected with the spike amongst the late 40’s group, as usually you wouldn’t expect that demographic to be really into playing games. This could have been due to some really passionate gamers in this age group, or having more time compared to other groups.\n",
+    "\n",
+    "Impact of Findings:\n",
+    "\n",
+    "Understanding which groups of players contribute to the largest amount of data collection has a very direct impact on recruitment efforts. By targeting these groups we are able to collect more data in a more efficient manner. \n",
+    "This insight would allow PLAI to better optimize their data collection. As PLAI would target these players to be able to more efficiently collect data and actually reach their goals of 10000 hours recorded more easily.\n",
+    "\n",
+    "Future Questions:\n",
+    "\n",
+    "Are there any other predictors that data can be gathered for to have a better understanding of the demographic of players that would bring in the most data?\n",
+    "Why do more experienced players engage less? Is it an issue due to difficulty level or level of engagement? Is there a way to engage them more without pushing out other experience levels?\n",
+    "How does in-game behaviour differ between the “kinds” of players? \n",
+    "What motivates higher engagement amongst players? If this could be found and applied to every player then every group would be good for data collection."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2036e46-840e-4f8d-871b-0eb41797900a",
+   "metadata": {},
+   "source": [
+    "***References***\n",
+    "\n",
+    "Pacific Laboratory for Artificial Intelligence. (2023, September 27). Plaicraft. PLAICraft. https://plaicraft.ai/"
+   ]
   }
  ],
  "metadata": {
