--- a/DSCI_Final_Project.ipynb
+++ b/DSCI_Final_Project.ipynb
@@ -2540,7 +2540,7 @@
    "id": "f06f170a-18e5-4255-94f1-1aa720e83a94",
    "metadata": {},
    "source": [
-    "This bar graphs represents the average number of hours played for each gender category. The categories \"Other\", \"Prefer not to say\", and \"Two-Sprited\", all have 1 or less than 1 hours played in the. The meximum number of hours played is 15 hours, which is by individuals in the category \"Non-binary\"."
+    "This bar graphs represents the average number of hours played for each gender category. The categories \"Other\", \"Prefer not to say\", and \"Two-Sprited\", all have 1 or less than 1 hours played in the game. The meximum number of hours played is 15 hours, which is by individuals in the category \"Non-binary\"."
    ]
   },
   {
