FINAL FINAL FINAL

--- a/DSCI_Final_Project.ipynb
+++ b/DSCI_Final_Project.ipynb
@@ -392,7 +392,7 @@
    "id": "eeb9fe3f-cc33-4458-aaca-483257889b78",
    "metadata": {},
    "source": [
-    "In this first step, we are first loading the dataset \"players.csv\" from the github repository, and selecting the columns needed to answer our question. Using the select() function, the columns experience, age, and played_hours are selected as experience and age are our predictors to find the number of played_hours. Finally, we split the data set, and create training and testing dataframes to use for the knn regression analysis. The training() function is a split of the original code that is used to test the knn regression on the dataset, whereas, the testing() function evaluates the performance of the model by comparing predicted values to actual values."
+    "In this first step, we are first loading the dataset \"players.csv\" from the github repository, and selecting the columns needed to answer our question. Using the select() function, the columns experience, age, and played_hours are selected as experience and age are our predictors to find the number of played_hours. Finally, we split the data set, and create training and testing data frames to use for the knn regression analysis. The training() function is a split of the original code that is used to test the knn regression on the dataset, whereas, the testing() function evaluates the performance of the model by comparing predicted values to actual values."
    ]
   },
   {
@@ -1175,7 +1175,7 @@
    "id": "3f115a49-6c37-490e-8189-881aa1443ea9",
    "metadata": {},
    "source": [
-    "Now, the data set players_select is being represented in 2 plots that shows Age or experience versus the number of hours played. The purpose of these plots is to represent both the predictors and how it relates to played_hours for the original data frame. Age vs. played_hours is visualized using a smooth plot, that shows a concave up parabola slope, where the hours spent playing the game increases as age decreases until 100 hours, when it begins increasing with age. Experience is represented in a bar plot, indicating that regular and amateur players spend the most time playing."
+    "Now, the data set players_select is being represented in 2 plots that shows Age or experience versus the number of hours played. The purpose of these plots is to represent both the predictors and how it relates to played_hours for the original data frame. Age vs. played_hours is visualized using a smooth plot that shows a concave up parabola slope, where the hours spent playing the game increases as age decreases until 100 hours, when it begins increasing with age. Experience is represented in a bar plot, indicating that regular and amateur players spend the most time playing."
    ]
   },
   {
@@ -1235,9 +1235,9 @@
    "source": [
     "In this step, a specification is created, which essentially sets the engine and mode used for analyzing the dataset. By using \"kknn\", this indicates a package that would find the k-nearest neighbors, and the \"regression\" indicates that the model is being used to predict a certain outcome. Moreover, as the tune() function is used, this indicates that the number of neighbors best suited for this model will be determined later in the model.\n",
     "\n",
-    "Next, a recipe a used to assign the predictors for the played_hours, which are experience and Age. step_scale is an important step to scale all the values so that they influence the calculations using the same scope so that the impacts are relative to each predictor as opposed to each predictor's inidividual scope. This way, neither predictor has a substantial impact over the other, skewing the values. Finally, step_center ensures that all the predictors are at the center.\n",
+    "Next, a recipe is used to assign the predictors for the played_hours, which are experience and Age. step_scale is an important step to scale all the values so that they influence the calculations using the same scope so that the impacts are relative to each predictor as opposed to each predictor's inidividual scope. This way, neither predictor has a substantial impact over the other, skewing the values. Finally, step_center ensures that all the predictors are at the center.\n",
     "\n",
-    "The players_vfold code is used to create a \"nested\" cross-validation object, which selects a model and estimates how well it generalizes to an unseen dataset to provide the most accurate results. Finally, by creating a workflow for the dataset, the model is specified and the pre-processing recipe steps are added."
+    "The players_vfold code is used to create a \"nested\" cross-validation object, which selects a model and estimates how well it generalizes to an unseen dataset to provide the most accurate results. Finally, by creating a workflow for the dataset, the model is specified and the preprocessing recipe steps are added."
    ]
   },
   {
@@ -1391,7 +1391,7 @@
    "source": [
     "In this step, the best model configuration is selected using the tune_grid() function. The tune_grid() sets a parameter using grid, and with the cross-validation code and workflow, determines the best model confirguration based on different metrics (rmse and rsq) for different neighbors set by the \"gridvals\" code.\n",
     "\n",
-    "Next, the \"players_min\" code is used to find the lowest standard error in the dataset, and then see which number of K (neighbors) is associated with it, then using it for our players_testing dataset to do the final prediction. The code ensures that the table goes in ascending order of std_err, so by slicing the first row, you will get the smallest std_err and neighbor number. The code shows that the lowest standard error is 6.4 and the neighbors at 61. "
+    "Next, the \"players_min\" code is used to find the lowest standard error in the dataset, and then see which number of K (neighbors) is associated with it, then using it for our players_testing dataset to do the final prediction. The standard error for this dataset is 6.46. While the benchmark for a good standard error is less than 0.5. However, considering that the data points go to 233 hours played, an error of 6 hours isn't very significant. The code ensures that the table goes in ascending order of std_err, so by slicing the first row, you will get the smallest std_err and neighbor number. The code shows that the lowest standard error is 6.4 and the neighbors at 11."
    ]
   },
   {
